# smoke-tests

./: .gitignore  DEPENDENTS.md  README.md  package.json  renovate.json
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
Documentation/: index.html
node/: README.md
node/react/create-react-app/: README.md  craco.config.js  package.json
node/react/create-react-app/Source/: App.js
node/react/create-react-app/src-tauri/: Cargo.toml
node/react/gatsby-themed-site/: README.md  gatsby-config.js  package.json
node/react/gatsby-themed-site/src-tauri/: .gitignore  Cargo.toml
node/react/next.js/: .gitignore  README.md  package.json
node/react/next.js/Documentation/: index.html  modules.html
node/react/next.js/components/: nav.js
node/react/next.js/pages/: index.js
node/react/next.js/src-tauri/: .gitignore  Cargo.toml  build.rs
node/svelte/svelte-app/: .gitignore  README.md  package.json  rollup.config.js
node/svelte/svelte-app/src-tauri/: .gitignore
node/vanillajs/monolith/: README.md  package.json
node/vanillajs/monolith/Documentation/: index.html  modules.html
node/vanillajs/monolith/src-tauri/: Cargo.toml
node/vue/nuxt-app/: .gitignore  README.md  nuxt.config.js  package.json
node/vue/nuxt-app/Documentation/: index.html  modules.html
node/vue/quasar-app/: .gitignore  README.md  package.json  quasar.conf.js
node/vue/vue-cli-app/: .gitignore  README.md  package.json
rust/yew/todomvc/: .gitignore  Makefile.toml  README.md  package.json
rust/yew/todomvc/src-tauri/: Cargo.toml
rust/yew/todomvc/todomvc/: Cargo.toml
rust/yew/todomvc/todomvc/Source/: lib.rs
transpiled/flutter/: .gitignore  README.md  package.json  pubspec.yaml
transpiled/flutter/Documentation/: index.html  modules.html
transpiled/flutter/src-tauri/: Cargo.toml  build.rs
transpiled/mint-tauri-starter/: README.md  mint.json  package.json
transpiled/mint-tauri-starter/Documentation/: index.html  modules.html
transpiled/mint-tauri-starter/src-tauri/: .gitignore  Cargo.toml
transpiled/reason-react/: .gitignore  README.md  bsconfig.json  package.json  watcher.js  webpack.config.js
transpiled/reason-react/src-tauri/: Cargo.toml
(+13 files in other folders)
