[package]
name = "app"
version = "0.1.0"
description = "Mint + Tauri"
authors = ["you"]
license-file = "LICENSE"
repository = ""
default-run = "app"
edition = "2018"

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta-rc.4", features = ["all-api"] }

[build-dependencies]
tauri-build = "1.0.0-beta-rc.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "app"
path = "src/main.rs"
