workspace = {}

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
author = ["you"]
license-file = "LICENSE"
repository = ""
default-run = "app"
edition = "2018"

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tauri = { path = "../../../../../core/tauri", features = [] }

[build-dependencies]
tauri-build = { path = "../../../../../core/tauri-build" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "app"
path = "src/main.rs"
