[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
author = ["you"]
license-file = "LICENSE"
repository = ""
default-run = "app"
edition = "2018"

[dependencies]
serde_json = { version = "1.0.116" }
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "2.0.0", features = ["api-all"] }

[build-dependencies]
tauri-build = "2.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "app"
path = "src/main.rs"
