workspace = {}

[package]
name = "todomvc"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
strum = { version = "0.26.2" }
strum_macros = { version = "0.26.2" }
serde = { version = "1.0.200" }
serde_derive = { version = "1.0.200" }
yew = { version = "0.21.0", features = ["web_sys"] }
